--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,61 +1,11 @@
 version: 0.2
 
-# env:
-#   variables:
-#     key: "value"
-#     key: "value"
-#   parameter-store:
-#     key: "value"
-#     key: "value"
-            
 phases:
-  # install:    
-  #   commands:
-  #     - command
-  #     - command
-  #   finally:
-  #     - command
-  #     - command
-  # pre_build:
-  #   commands:
-  #     - command
-  #     - command
-  #   finally:
-  #     - command
-  #     - command
   build:
     commands:
       - javac Test.java
-  #     - command
-  #   finally:
-  #     - command
-  #     - command
-  # post_build:
-  #   commands:
-  #     - command
-  #     - command
-  #   finally:
-  #     - command
-  #     - command
-artifacts:
-  files:
-    - *.java
-  discard-paths: yes
-  base-directory: /
-#   secondary-artifacts:
-#     artifactIdentifier:
-#       files:
-#         - location
-#         - location
-#       discard-paths: yes
-#       base-directory: location
-#     artifactIdentifier:
-#       files:
-#         - location
-#         - location
-#       discard-paths: yes
-#       base-directory: location
-# cache:
-#   paths:
-#     - path
-#     - path
+#artifacts:
+#  files:
+#    - *.java
+#  discard-paths: yes
+#  base-directory: /
