--- a/environment/codedeploy.yaml
+++ b/environment/codedeploy.yaml
@@ -4,7 +4,7 @@ Parameters:
   PrefijoAutoscaling:
     Description: Prefijo de los grupo de AutoScalingGroups
     Type: String
-    Default: Taller
+    Default: TestApp
   AdminEmail:
     Description: Mail del admiistrador de Codedeploy
     Type: String
@@ -92,17 +92,24 @@ Resources:
 
   DeployTopic:
     Type: "AWS::SNS::Topic"
-    Description: Envio de notificaciones de aprobación para despliegue con CodePipeline
+    Description: Envio de notificaciones Codedeploy
     Properties: 
         DisplayName: !Join ["-", [ CodeDeploy, !Ref ApplicationName, "Info"  ]]
         TopicName: !Join ["-", [ CodeDeploy, !Ref ApplicationName, "Info"  ]]
+
+  DeployErrorTopic:
+    Type: "AWS::SNS::Topic"
+    Description: Topic para manejar los errores en deploy
+    Properties: 
+        DisplayName: !Join ["-", [ CodeDeploy, !Ref ApplicationName, "Error"  ]]
+        TopicName: !Join ["-", [ CodeDeploy, !Ref ApplicationName, "Error"  ]]
   
-  ApprovalSuscrition:
-        Type: "AWS::SNS::Subscription"
-        Properties:
-            Endpoint: !Ref AdminEmail
-            Protocol: email
-            TopicArn: !Ref DeployTopic
+  # ApprovalSuscrition:
+  #       Type: "AWS::SNS::Subscription"
+  #       Properties:
+  #           Endpoint: !Ref AdminEmail
+  #           Protocol: email
+  #           TopicArn: !Ref DeployTopic
 
   CodeDeployApplication:
     Type: 'AWS::CodeDeploy::Application'
@@ -116,8 +123,8 @@ Resources:
     Properties:
       ApplicationName: !Ref CodeDeployApplication
       AutoScalingGroups:
-        - !Join ["-" , [ !Ref Ambiente, !Ref PrefijoAutoscaling]]
-      DeploymentGroupName: !Join ["-" , [ !Ref Ambiente,!Ref ApplicationName ]]
+        - !Join ["-" , [ !Ref Ambiente, !Ref PrefijoAutoscaling ]]
+      DeploymentGroupName: !Join ["-" , [ !Ref Ambiente,!Ref PrefijoAutoscaling ]]
       AutoRollbackConfiguration:
         Enabled: 'true'
         Events:
@@ -137,7 +144,7 @@ Resources:
             - DeploymentFailure
             - InstanceFailure
           TriggerName: ProcessError
-          TriggerTargetArn: !Ref DeployTopic
+          TriggerTargetArn: !Ref DeployErrorTopic
 
 
 # Outputs:
