--- a/environment/codebuild-vpc.yml
+++ b/environment/codebuild-vpc.yml
@@ -1,15 +1,6 @@
 
 Description: 
-
-    This template deploys a VPC, with a pair of public and private subnets spread 
-
-    across two Availability Zones. It deploys an Internet Gateway, with a default 
-
-    route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ), 
-
-    and default routes for them in the private subnets.
-
-
+    VPC para taller de AWS
 
 Parameters:
     EnvironmentName:
