--- a/appspec.yml
+++ b/appspec.yml
@@ -1,13 +1,13 @@
 version: 0.0
 os: linux
 files:
-  - source: test-webapp-1.0-SNAPSHOT.war
+  - source: test-webapp.war
     destination: /home/ubuntu/tomcat7/webapps
   - source: config/tomcat-users.xml
     destination: /home/ubuntu/tomcat7/config
 
 permissions:
-  - object: /home/ubuntu/tomcat7/webapps/test-webapp-1.0-SNAPSHOT.war
+  - object: /home/ubuntu/tomcat7/webapps/test-webapp.war
     group: ubuntu
     owner: ubuntu
     mode: 644
